--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="grid-container">
     <model-viewer class="a" 
      src="./assets/model/UsExpo_AR.glb"
-     ios-src="./assets/model/Male.usdz"
+     ios-src="./assets/model/Denial.reality"
      exposure="1"
      alt="assets" 
      loading="auto" 
