--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   
   <div class="grid-container">
     <model-viewer class="a" 
-     src="./assets/model/UsExpo_AR.glb"
+     src="./assets/model/Male.glb"
      ios-src="./assets/model/Denial_1.reality"
      exposure="1"
      alt="assets" 
@@ -35,7 +35,7 @@
      quick-look-browsers="safari chrome" 
      id="model-viewer"
      ar-status="not-presenting" 
-     >
+     autoplay>
     <input slot="ar-button" class="ar-button" value="submit" type="image" src="./assets/image/ariconsiyah.png" width="30px" height="30px"> 
     </model-viewer>
 
