--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
      alt="assets" 
      loading="auto" 
      environment-image="neutral"
-     poster="/assets/image/loading4.gif" 
+     poster="./assets/image/loading4.gif" 
      camera-controls
      camera-orbit 
      ar ar-placement=""
